# cg-2020

./: .gitignore  .gitmodules  README.md
include/: CMakeLists.txt  Camera.cpp  Camera.hpp  Linalg.cpp  Linalg.hpp  OBJ_Loader.hpp  Pyramid.cpp  Pyramid.hpp  Scene.cpp  Scene.hpp  Timer.cpp  Timer.hpp  Triangle.cpp  Triangle.hpp  Zbuf.cpp  Zbuf.hpp  global.cpp  global.hpp  shaders.cpp  shaders.hpp  zbuf.cpp  zbuf.hpp
ogl-tutorial/: CMakeLists.txt  Makefile  main.cpp
pa1/: CMakeLists.txt  Makefile  README.md  main.cpp  roadmap.md
pa1/include/: CMakeLists.txt  Camera.cpp  Camera.hpp  Pyramid.cpp  Pyramid.hpp  Scene.hpp  Timer.cpp  Triangle.cpp  Triangle.hpp  Zbuf.cpp  Zbuf.hpp  global.cpp  global.hpp  shaders.hpp
pa2/: CMakeLists.txt  Makefile  README.md  cam.conf  default.conf  extern  main.cpp
pa2/cameras/: car-back  car-front  car1  car2  cornelbox  cornellbox  diningroom  planes
pa2/include/: CMakeLists.txt  Camera.cpp  Camera.hpp  Material.cpp  Material.hpp  Ray.hpp  Scene.cpp  Scene.hpp  Screen.cpp  Screen.hpp  SkyBox.cpp  SkyBox.hpp  Timer.cpp  Timer.hpp  Triangle.cpp  Triangle.hpp  global.cpp  global.hpp
